--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <tr>
                 <td><img src="img/mejoresprecios.png" name="mejoresprices" alt="Image de mejores Precios"
                     width="200" height="160"></td>
-                <td><img src="img/calidad1.png" name="mejoresprices" alt="Image de mejores Precios"
+                <td><img src="img/calidad1.png" name="Calidad" alt="Calidad"
                     width="250" height="210"></td>
-                <td><img src="img/garantia.png" name="mejoresprices" alt="Image de mejores Precios"
+                <td><img src="img/garantia.png" name="garantia" alt="garantia"
                     width="200" height="160"></td>
             </tr>
             <tr>
@@ -64,11 +64,11 @@
         <center><table>
 
             <tr>
-                <td><img src="img/juegomesa.png" name="mejoresprices" alt="Image de mejores Precios"
+                <td><img src="img/juegomesa.png" name="JuegosDeMesa" alt="JuegosDeMesa"
                     width="200" height="160"></td>
-                <td><img src="img/niño.png" name="mejoresprices" alt="Image de mejores Precios"
+                <td><img src="img/niño.png" name="CosasNiño" alt="Cosas para el Niño"
                     width="200" height="160"></td>
-                <td><img src="img/niña.png" name="mejoresprices" alt="Image de mejores Precios"
+                <td><img src="img/niña.png" name="CosasNiña" alt="Cosas para la Niña"
                     width="200" height="160"></td>
             </tr>
             <tr>
